--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link
-      href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css"
-      rel="stylesheet"
-    />
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins:400,700,800,900"
